--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/3808de5cb1.js" crossorigin="anonymous"></script>
     <!--Font-->
-    <link rel="stylesheet"
-        href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
-
+    <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <!--Microphone animation-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"
         integrity="sha512-m0RQU4SBx0p/bLwRiI4fJBGRafVLZ4s86wRe1+OAx5EXbcWiS/X1jvYdJQRD8jOoIVl+WTyVeMawUWVCh1O8+Q=="
@@ -43,7 +43,7 @@
     </div>
     <section id="home">
         <div class="container">
-            <div id="animated-icon"></div>
+            <img src="./assets/img/illustrationmic.svg" alt="mic" class="mic">
             <div id="home-text">
                 <img src="./assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
                 <img src="./assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
@@ -56,7 +56,7 @@
                     <img src="./assets/icons/Vectoricon2.svg" alt="social" class="home-icon">
                     <img src="./assets/icons/Vectoricon3.svg" alt="social" class="home-icon">
                     <img src="./assets/icons/Vectoricon4.svg" alt="social" class="home-icon">
-                    <img src="./assets/icons/Vectoricon5.svg" alt="social" class="home-icon"> 
+                    <img src="./assets/icons/Vectoricon5.svg" alt="social" class="home-icon">
                     <img src="./assets/icons/Vectoricon6.svg" alt="social" class="home-icon">
                 </div>
 
@@ -64,11 +64,118 @@
 
         </div>
     </section>
+    <section id="aboutus">
+        <div class="about">
+            <img src="./assets/img/group_dsc.png" alt="group" class="group">
+            <div class="about-text">
+                <h1>
+                    About Us
+                </h1>
+                <p>
+                    We are one of the most popular student technical communities in India with an aim to help young
+                    developers and designers learn and improve their skillset, and this podcast is one of the few things
+                    we do as a community to achieve that aim.
+                </p>
+                <p>
+                    Currently functioning out of Vellore Institute of Technology, Vellore, we are a bunch of
+                    hard-working managers, gradient-loving designers and caffieine-addicted developers thinking out of
+                    the box to propagate learning and teaching, symbiotically.
 
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="episodes">
+        <div class="episodes">
+            <h1>Episodes</h1>
+            <div class="card">
+                <p>12 NOV 2020</p>
+                <div class="extend">
+                    <h2>
+                        Student Scholarships and Fellowships
+                    </h2>
+                    <i class="fas fa-chevron-down fa-2x"></i>
+                </div>
+                <p class="extend-text">
+                    A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
+                    for any student in their college journey.
+                    DSC Afterhours is a new series of podcast discussions by the members of DSC VIT to talk about their
+                    journey in tech, learn new things, have fun and impart knowledge in the process. In Episode 3 of
+                    DSC-Afterhours…
+                </p>
+                <div class="play">
+                    <div class="play-btn">
+                        <i class="fas fa-play-circle"></i>
+                        <p>Play</p>
+                    </div>
+
+                </div>
+                <p class="play-time">46 Mins</p>
+                <div class="extend-small">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
+            <div class="card">
+                <p>12 NOV 2020</p>
+                <div class="extend">
+                    <h2>
+                        Student Scholarships and Fellowships
+                    </h2>
+                    <i class="fas fa-chevron-down fa-2x"></i>
+                </div>
+                <p class="extend-text">
+                    A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
+                    for any student in their college journey.
+                    DSC Afterhours is a new series of podcast discussions by the members of DSC VIT to talk about their
+                    journey in tech, learn new things, have fun and impart knowledge in the process. In Episode 3 of
+                    DSC-Afterhours…
+                </p>
+                <div class="play">
+                    <div class="play-btn">
+                        <i class="fas fa-play-circle"></i>
+                        <p>Play</p>
+                    </div>
+
+                </div>
+                <p class="play-time">46 Mins</p>
+                <div class="extend-small">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
+            <div class="card">
+                <p>12 NOV 2020</p>
+                <div class="extend">
+                    <h2>
+                        Student Scholarships and Fellowships
+                    </h2>
+                    <i class="fas fa-chevron-down fa-2x"></i>
+                </div>
+                <p class="extend-text">
+                    A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
+                    for any student in their college journey.
+                    DSC Afterhours is a new series of podcast discussions by the members of DSC VIT to talk about their
+                    journey in tech, learn new things, have fun and impart knowledge in the process. In Episode 3 of
+                    DSC-Afterhours…
+                </p>
+                <div class="play">
+                    <div class="play-btn">
+                        <i class="fas fa-play-circle"></i>
+                        <p>Play</p>
+                    </div>
+
+                </div>
+                <p class="play-time">46 Mins</p>
+                <div class="extend-small">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!--Scripts-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./assets/js/index.js"></script>
 </body>
 
