--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar">
             <span>
                 <a href="#home">
-                    <img src="./assets/img/DSC Whitedsc.svg" alt="dsc" class="nav-logo">
+                    <img src="./assets/img/DSCWhitedsc.svg" alt="dsc" class="nav-logo">
                 </a>
             </span>
             <img src="./assets/icons/Vectorbars.svg" alt="menu" class="mobile-bars">
@@ -169,6 +169,71 @@
                     <i class="fas fa-chevron-down"></i>
                 </div>
             </div>
+        </div>
+    </section>
+    <section id="footer">
+        <div class="footer-one">
+            <img src="./assets/img/dsc-logo-white.svg" alt="">
+        </div>
+        <div class="footer-two">
+            <span class="socials">
+                <h2>Social</h2>
+                <a href="">
+                    <i class="fab fa-instagram"></i>
+                    <p>Instagram</p>
+                </a>
+                <a href="">
+                    <i class="fab fa-twitter"></i>
+                    <p>
+                        Twitter
+                    </p>
+                </a>
+                <a href="">
+                    <i class="fab fa-linkedin"></i>
+                    <p>
+                        LinkedIn
+                    </p>
+                </a>
+                <a href="">
+                    <i class="fab fa-facebook"></i>
+                    <p>
+                        Facebook
+                    </p>
+                </a>
+            </span>
+            <span class="f-about">
+                <h2>About Us</h2>
+                <a href="">
+                    <p>Our Website</p>
+                </a>
+                <a href="">
+                    <p>GitHub</p>
+                </a>
+                <a href="">
+                    <p>Medium</p>
+                </a>  
+            </span>
+            <span class="links">
+                <h2>Links</h2>
+                <a href="">
+                    <p>Spotify</p>
+                </a>
+                <a href="">
+                    <p>Apple Podcasts</p>
+                </a>
+                <a href="">
+                    <p>Pocket Casts</p>
+                </a>
+                <a href="">
+                    <p>Google Podcasts</p>
+                </a>
+                <a href="">
+                    <p>Overcast</p>
+                </a>
+                <a href="">
+                    <p>RadioPublic</p>
+                </a>
+            </span>
         </div>
     </section>
 
