--- a/index.html
+++ b/index.html
@@ -173,33 +173,40 @@
     </section>
     <section id="footer">
         <div class="footer-one">
-            <img src="./assets/img/dsc-logo-white.svg" alt="">
+            <img src="./assets/img/full-logo.svg" alt="dsc" class="full-logo">
+            <img src="./assets/img/full-logo-center.svg" alt="dsc" class="full-logo-center">
+            <p class="mwl">Made with <i class="far fa-heart"></i> by DSC VIT</p>
+
         </div>
         <div class="footer-two">
             <span class="socials">
                 <h2>Social</h2>
-                <a href="">
-                    <i class="fab fa-instagram"></i>
-                    <p>Instagram</p>
-                </a>
-                <a href="">
-                    <i class="fab fa-twitter"></i>
-                    <p>
-                        Twitter
-                    </p>
-                </a>
-                <a href="">
-                    <i class="fab fa-linkedin"></i>
-                    <p>
-                        LinkedIn
-                    </p>
-                </a>
-                <a href="">
-                    <i class="fab fa-facebook"></i>
-                    <p>
-                        Facebook
-                    </p>
-                </a>
+                <div class="socials-text">
+                    <a href="">
+                        <i class="fab fa-instagram"></i>
+                        <p>Instagram</p>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-twitter"></i>
+                        <p>
+                            Twitter
+                        </p>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-linkedin"></i>
+                        <p>
+                            LinkedIn
+                        </p>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-facebook"></i>
+                        <p>
+                            Facebook
+                        </p>
+                    </a>
+    
+
+                </div>
             </span>
             <span class="f-about">
                 <h2>About Us</h2>
