front cdn secure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/3808de5cb1.js" crossorigin="anonymous"></script>
     <!--Font-->
-    <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
     <!--Microphone animation-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.4/lottie.min.js"
         integrity="sha512-m0RQU4SBx0p/bLwRiI4fJBGRafVLZ4s86wRe1+OAx5EXbcWiS/X1jvYdJQRD8jOoIVl+WTyVeMawUWVCh1O8+Q=="
