navbar active + card expand

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <img src="./assets/icons/Vectorbars.svg" alt="menu" class="mobile-bars">
 
             <ul class="nav-list">
-                <li class="nav-link">
-                    <a href="#aboutus" class="active">About Us</a>
+                <li class="nav-link ">
+                    <a href="#aboutus" class="active click">About Us</a>
                 </li>
-                <li class="nav-link">
-                    <a href="#episodes">Episodes</a>
+                <li class="nav-link ">
+                    <a href="#episodes" class="click">Episodes</a>
                 </li>
                 <li class="nav-link">
                     <a href="#subscribe">Subscribe</a>
@@ -94,7 +94,37 @@
                     <h2>
                         Student Scholarships and Fellowships
                     </h2>
-                    <i class="fas fa-chevron-down fa-2x"></i>
+                    <i class="fas fa-chevron-down fa-2x chevron"></i>
+                </div>
+                <p class="extend-text">
+                    A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
+                    for any student in their college journey.
+                    DSC Afterhours is a new series of podcast discussions by the members of DSC VIT to talk about their
+                    journey in tech, learn new things, have fun and impart knowledge in the process. In Episode 3 of
+                    DSC-Afterhours…
+                </p>
+                <!--
+                <div class="play">
+                    <div class="play-btn">
+                        <i class="fas fa-play-circle"></i>
+                        <p>Play</p>
+                    </div>
+                </div>
+                <p class="play-time">46 Mins</p>
+                <div class="extend-small">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                -->
+                <iframe src="https://anchor.fm/dsc-vit/embed/episodes/Introducing-DSC-Afterhours-elalj4/a-a3jis0h" height="140px" width="100%" frameborder="0" scrolling="no"></iframe>
+
+            </div>
+            <div class="card">
+                <p>12 NOV 2020</p>
+                <div class="extend">
+                    <h2>
+                        Student Scholarships and Fellowships
+                    </h2>
+                    <i class="fas fa-chevron-down fa-2x chevron"></i>
                 </div>
                 <p class="extend-text">
                     A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
@@ -112,7 +142,7 @@
                 </div>
                 <p class="play-time">46 Mins</p>
                 <div class="extend-small">
-                    <i class="fas fa-chevron-down"></i>
+                    <i class="fas fa-chevron-down chevron"></i>
                 </div>
             </div>
             <div class="card">
@@ -121,35 +151,7 @@
                     <h2>
                         Student Scholarships and Fellowships
                     </h2>
-                    <i class="fas fa-chevron-down fa-2x"></i>
-                </div>
-                <p class="extend-text">
-                    A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
-                    for any student in their college journey.
-                    DSC Afterhours is a new series of podcast discussions by the members of DSC VIT to talk about their
-                    journey in tech, learn new things, have fun and impart knowledge in the process. In Episode 3 of
-                    DSC-Afterhours…
-                </p>
-                <div class="play">
-                    <div class="play-btn">
-                        <i class="fas fa-play-circle"></i>
-                        <p>Play</p>
-                    </div>
-
-                </div>
-                <p class="play-time">46 Mins</p>
-                <div class="extend-small">
-                    <i class="fas fa-chevron-down"></i>
-                </div>
-            </div>
-            <iframe src="https://anchor.fm/dsc-vit/embed/episodes/Introducing-DSC-Afterhours-elalj4/a-a3jis0h" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
-            <div class="card">
-                <p>12 NOV 2020</p>
-                <div class="extend">
-                    <h2>
-                        Student Scholarships and Fellowships
-                    </h2>
-                    <i class="fas fa-chevron-down fa-2x"></i>
+                    <i class="fas fa-chevron-down fa-2x chevron"></i>
                 </div>
                 <p class="extend-text">
                     A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
