removed v1 cards + updated anchor card

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <section id="episodes">
         <div class="episodes">
             <h1>Episodes</h1>
+            <!--USE THIS CARD FOR TEMPLATING-->
             <div class="card">
                 <p>12 NOV 2020</p>
                 <div class="extend">
@@ -103,75 +104,11 @@
                     journey in tech, learn new things, have fun and impart knowledge in the process. In Episode 3 of
                     DSC-Afterhours…
                 </p>
-                <!--
-                <div class="play">
-                    <div class="play-btn">
-                        <i class="fas fa-play-circle"></i>
-                        <p>Play</p>
-                    </div>
-                </div>
-                <p class="play-time">46 Mins</p>
-                <div class="extend-small">
-                    <i class="fas fa-chevron-down"></i>
-                </div>
-                -->
-                <iframe src="https://anchor.fm/dsc-vit/embed/episodes/Introducing-DSC-Afterhours-elalj4/a-a3jis0h" height="140px" width="100%" frameborder="0" scrolling="no"></iframe>
-
+                <iframe src="https://anchor.fm/dsc-vit/embed/episodes/Introducing-DSC-Afterhours-elalj4/a-a3jis0h"
+                    height="140px" width="100%" frameborder="0" scrolling="no"></iframe>
             </div>
-            <div class="card">
-                <p>12 NOV 2020</p>
-                <div class="extend">
-                    <h2>
-                        Student Scholarships and Fellowships
-                    </h2>
-                    <i class="fas fa-chevron-down fa-2x chevron"></i>
-                </div>
-                <p class="extend-text">
-                    A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
-                    for any student in their college journey.
-                    DSC Afterhours is a new series of podcast discussions by the members of DSC VIT to talk about their
-                    journey in tech, learn new things, have fun and impart knowledge in the process. In Episode 3 of
-                    DSC-Afterhours…
-                </p>
-                <div class="play">
-                    <div class="play-btn">
-                        <i class="fas fa-play-circle"></i>
-                        <p>Play</p>
-                    </div>
 
-                </div>
-                <p class="play-time">46 Mins</p>
-                <div class="extend-small">
-                    <i class="fas fa-chevron-down chevron"></i>
-                </div>
-            </div>
-            <div class="card">
-                <p>12 NOV 2020</p>
-                <div class="extend">
-                    <h2>
-                        Student Scholarships and Fellowships
-                    </h2>
-                    <i class="fas fa-chevron-down fa-2x chevron"></i>
-                </div>
-                <p class="extend-text">
-                    A scholarship is not only a financial benefit but also a matter of pride and sense of achievement
-                    for any student in their college journey.
-                    DSC Afterhours is a new series of podcast discussions by the members of DSC VIT to talk about their
-                    journey in tech, learn new things, have fun and impart knowledge in the process. In Episode 3 of
-                    DSC-Afterhours…
-                </p>
-                <div class="play">
-                    <div class="play-btn">
-                        <i class="fas fa-play-circle"></i>
-                        <p>Play</p>
-                    </div>
 
-                </div>
-                <p class="play-time">46 Mins</p>
-                <div class="extend-small">
-                    <i class="fas fa-chevron-down"></i>
-                </div>
-            </div>
         </div>
     </section>
     <section id="footer">
@@ -207,7 +144,7 @@
                             Facebook
                         </p>
                     </a>
-    
+
 
                 </div>
             </span>
@@ -221,7 +158,7 @@
                 </a>
                 <a href="">
                     <p>Medium</p>
-                </a>  
+                </a>
             </span>
             <span class="links">
                 <h2>Links</h2>
