home page links + icons overflow

--- a/index.html
+++ b/index.html
@@ -128,21 +128,15 @@
                     </a>
                     <a href="">
                         <i class="fab fa-twitter"></i>
-                        <p>
-                            Twitter
-                        </p>
+                        <p>Twitter</p>
                     </a>
                     <a href="">
                         <i class="fab fa-linkedin"></i>
-                        <p>
-                            LinkedIn
-                        </p>
+                        <p>LinkedIn</p>
                     </a>
                     <a href="">
                         <i class="fab fa-facebook"></i>
-                        <p>
-                            Facebook
-                        </p>
+                        <p>Facebook</p>
                     </a>
 
 
