Fix: double animation

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <section id="home">
         <div class="container">
-            <div id='animated-icon'></div>
+            <div id="animated-icon"></div>
             <div id="home-text">
                 <img src="./assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
                 <img src="./assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
@@ -84,9 +84,7 @@
                         <img src="./assets/icons/Vectoricon6.svg" alt="social" class="home-icon"></a>
                     <a href="https://radiopublic.com/dsc-afterhours-WoL3jR">
                         <img src="./assets/icons/Vectoricon5.svg" alt="social" class="home-icon"></a> </div>
-
             </div>
-
         </div>
     </section>
     <section id="aboutus" class="section">
