Fix: Lottie anim replaced with css anim

--- a/index.html
+++ b/index.html
@@ -63,7 +63,18 @@
     </div>
     <section id="home">
         <div class="container">
+            <div class="circle-container">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <img src="../assets/img/Groupmic.svg" alt="dsc" class="micro">
+
+            </div>
+            <!-- Uncomment this for lottie animation
             <div id="animated-icon"></div>
+            -->
             <div id="home-text">
                 <img src="./assets/img/Vectorlogo_large.svg" alt="afterhours" class="desk-icon">
                 <img src="./assets/img/Vectorlogo_small.svg" alt="afterhours" class="mobile-icon">
